test/compile_errors/err_opaque_sizeof.w
//! expect-check-fail: sizeof requires a type with known layout

type FILE = opaque

fn main:
    let _size = sizeof[FILE]()
